LRCI-XXXX Try with logic